# ai_commit

./: .gitignore  @1  CHANGELOG.md  README.md  docs.md  pyproject.toml
.github/workflows/: pylint.yml
hooks/: pre-commit  pre-commit.sh  prepare-commit
src/: generate_commit.py  updated_generate.py
src/aicommitter/: generate_commit.py
